--- a/login.html
+++ b/login.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Login</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\Lenovo\Desktop\New folder\gitRep\InxhinieriWeb\lstyle.css">
+	<link rel="stylesheet" type="text/css" href="C:\Users\Lenovo\Desktop\New folder\gitRep\InxhinieriWeb\Java3\lstyle.css">
 </head>
 <body>
-<header> <img src="UBT.png"><p style="float: right;"><span style="color: red">Home About us</span> Contact</p>
+<header> <img src="UBT.png"><div class="top-right">Home About us Contact us </div>
 </header>
 <div id="first"> 
 	<h4>|  Login    | Register   |  </h4>
@@ -19,7 +19,7 @@
 </div>
 <footer>
 	<p >©</p>
-	<p>UBT- prill 2020 - <a href="">Reference</a></p>
+	<p>UBT- prill 2020 - <a href="https://github.com/BleonaH/Java3.git">Reference</a></p>
 </footer>
 </body>
 </html>
